chore: reduce compiler config.